Small correction in problem 3 (incomplete)

--- a/ex05/ex05.tex
+++ b/ex05/ex05.tex
@@ -153,7 +153,7 @@ f(x) =
         + \int_{0}^{\infty}{e^{-x^2-i\omega x} dx}\Big) \\
     &= \frac{1}{4\sqrt{2\pi}}\Big(\Big[{\frac{-1}{2x+1}e^{-x^2-i\omega x}\Big]_{-\infty}^{0}} 
         + \Big[{\frac{-1}{2x+1}e^{-x^2-i\omega x}\Big]_{0}^{\infty}}\Big) \\
-    &= \frac{1}{4\sqrt{2\pi}}\Bigg(\Big( (-1) - 0\Big) + \Big(0 - 1 \Big)\Bigg) \\
+    &= \frac{1}{4\sqrt{2\pi}}\Bigg(\Big( (-1) - 0\Big) + \Big(0 + 1 \Big)\Bigg) \\
 \end{align}
 
 
