Add solutions for 1a and from 3b to 4

--- a/ex06/ex06.tex
+++ b/ex06/ex06.tex
@@ -4,7 +4,7 @@
 
 % mathermatics
 \usepackage{amssymb} % useful math symbols
-\usepackage{amsmath} % more useful math
+\usepackage{mathrsfs,amsmath} % more useful math (mathrsfs for Fourier F)
 
 % graphics
 \usepackage{graphicx}
@@ -51,22 +51,153 @@
 \fancyhead[C]{\textbf{Exercise 6}}
 \fancyhead[R]{Otto Lote (748704)}
 
+\ex{1}
 
-\ex{Exercise \#}
+\begin{align}
+    \intertext{We have}
+    \frac{\partial^2u}{\partial x^2} + \frac{\partial^2u}{\partial y^2} &= 0
+        ,\quad y>0, \, x \in \mathbb{R} \label{eq:1-PDE}\\
+    \intertext{with boundary conditions}
+    u(x,0) &= f(x) \\
+    \lim_{x\to\infty} u(x,y) &= 0 \label{eq:1-bound-x-inf}\\
+    \lim_{x\to-\infty} u(x,y) &= 0 \label{eq:1-bound-xinf}\\
+    \lim_{y\to\infty} u(x,y) &= 0 \label{eq:1-bound-yinf}\\
+\end{align}
 
 \begin{enumerate}[label=\alph*)]
     \item
+        \begin{align}
+            \hat u(w,y) &= \mathscr{F}(u)(w,y) \\
+            \intertext{Since the Fourier transform is an integral with respects
+                to \(x\) we can move the partial derivative with respect to y
+                in front of the integral, and therefore in front of the Fourier
+                transform.}
+            \mathscr{F}\Big(\frac{\partial^2u}{\partial y^2}\Big) &= 
+                \frac{\partial^2}{\partial y^2}\mathscr{F}(u) = 
+                \frac{\partial^2\hat u}{\partial y^2}\\
+            \intertext{We know that}
+            \mathscr{F}(u^{(n)}(x)) &= (iw)^n\hat u(w) \\
+            \intertext{which also holds for partial derivatives}
+            \mathscr{F}\Big( \frac{\partial^2u}{\partial x^2}\Big) &= -w^2\hat u \\
+            \intertext{Taking the Fourier transform of the PDE in
+                (\ref{eq:1-PDE}) gives us}
+            \frac{\partial^2\hat u}{\partial^2y} - w^2\hat u &= 0
+        \end{align}
 
     \item
+        \begin{align}
+            \intertext{If we write \(u = F(x)G(y)\) we can write the PDE as}
+            F''G + FG'' &= 0 \\
+            \intertext{Rearranging we get} 
+            \frac{F''}{F} &= - \frac{G''}{G} = k \\
+            \intertext{This is constant since \(F\) and \(G\) depend on
+                different variables. We can now form two ODEs}
+            F'' -kF &= 0 \\
+            G'' +kG &= 0 \\
+            \intertext{If we set positive \(k = \mu^2\) then \(G(y)\) has a
+                general solution that doesn't converge towards 0 as \(y \to
+                \infty\), so we set negative \(k = -p^2\) and get the general
+                solution}
+            G(y) &= G(0)\cosh(py) - G'(0) \frac{1}{p}\sinh(py) \\
+%            &= \frac{1}{2} \Big( G(0)(e^{py} + e^{-py}) -
+%                \frac{G'(0)}{p}(e^{py} - e^{-py}) \Big) \\
+%            &= \frac{1}{2} \Big( G(0)e^{py} + G(0)e^{-py} -
+%                \frac{G'(0)}{p}e^{py} + \frac{G'(0)}{p}e^{-py} \Big) \\
+            &= \frac{1}{2} \Big( \big(G(0)-\frac{G'(0)}{p}\big)e^{py} + \big(G(0) +
+                \frac{G'(0)}{p}\big)e^{-py} \Big) \\
+        \end{align}
+\end{enumerate}
+
+\ex{2}
+
+\begin{align}
+    \mathscr{L}(f(ct))(s) &= \int_0^\infty{e^{-st} f(ct) dt} \\
+    &= \frac{-1}{s}e^{-st}f(ct) - \int_0^\infty{\frac{-1}{s}e^{-st}f'(ct) dt} \\
+\end{align}
+
+\ex{3}
+
+\begin{enumerate}[label=\alph*)]
+    \item 
+        \begin{align}
+            f(t) &= \sinh(t)\cos(t) \\
+            F(t) &= \frac{1}{2}\int_0^\infty{e^{-st} (e^t - e^{-t})\cos(t) dt} \\
+            &= \frac{1}{4}\int_0^\infty{e^{-st} (e^t - e^{-t})(e^{it} + e^{-it}) dt} \\
+            &= \frac{1}{4}\int_0^\infty{e^{-st} (e^{it+t} - e^{it-t} +
+                e^{-it+t} - e^{-it-t}) dt} \\
+%% THIS PART WAS BEAUTIFUL, BUT IT WAS VERY VERY WRONG, WHAT A SHAME
+%            &= \frac{1}{4}\int_0^\infty{e^{-st} (e^{it+t} - e^{-(it+t)}) +
+%                e^{-st}(e^{-(it-t)} - e^{it-t}) dt} \\
+%            &= \frac{1}{2}\int_0^\infty{e^{-st} \frac{1}{2}(e^{(it+t)} -
+%                e^{-(it+t)}) dt} - \int_0^\infty{e^{-st}\frac{1}{2}(e^{(it-t)}
+%                - e^{-(it-t)}) dt} \\
+%            &= \frac{1}{2} \Big( \mathscr{L}\{\sinh(it+t)\} -
+%                \mathscr{L}\{\sinh(it-t)\} \Big) \\
+%            &= \frac{1}{2} \Bigg( \frac{it+t}{s^2 - (it+t)^2} -
+%                \frac{it-t}{s^2 - (it-t)^2} \Bigg) \\
+%            &= \frac{1}{2} \Bigg( \frac{it+t}{s^2 - 2it} -
+%                \frac{it-t}{s^2 + 2it} \Bigg) \\
+%            &= \frac{1}{2} \Bigg( \frac{(it+t)(s^2 + 2it)}{s^4 + 4t^2} -
+%                \frac{(it-t)(s^2 - 2it)}{s^4 + 4t^2} \Bigg) \\
+%            &= \frac{1}{2} \Bigg( \frac{(its^2 - 2t^2 + ts^2 + 2it^2) 
+%            - (its^2 + 2t^2 - ts^2 + 2it^2)}{s^4 + 4t^2} \Bigg) \\
+%            &= \frac{ts^2 - 2t^2}{s^4 + 4t^2}\\
+            \intertext{This is the same as \(\frac{1}{2} \mathscr{L}
+                \{\sinh(it+t)\} - \frac{1}{2} \mathscr{L} \{\sinh(it-t)\}\). By
+                using this with the table for \(\frac{1}{a}\sinh{at}\) the
+                final result was quite beautiful, but as I realise now it was
+                also very very wrong (setting \(at = it\pm t\)). What a shame.}
+            &= \frac{1}{4}\int_0^\infty{e^{it+t-st} - e^{it-t-st} +
+                e^{-it+t-st} - e^{-it-t-st} dt} \\
+            &= \frac{1}{4}\int_0^\infty{e^{t(i+1-s)} - e^{t(i-1-s)} +
+                e^{t(-i+1-s)} - e^{t(-i-1-s)} dt} \\
+            &= \frac{1}{4} \Big[ \frac{1}{i+1-s}e^{t(i+1-s)} -
+                \frac{1}{i-1-s}e^{t(i-1-s)} + \frac{1}{-i+1-s}e^{t(-i+1-s)} -
+                \frac{1}{-i-1-s}e^{t(-i-1-s)}  \Big]_0^\infty      \\
+            &= \frac{1}{4} \Big[ \frac{e^{t(i-1-s)}}{(s+1)-i}
+                +\frac{e^{t(-i-1-s)}}{(s+1)+i} - \frac{e^{t(-i+1-s)}}{(s-1)+i}
+                - \frac{e^{t(i+1-s)}}{(s-1)-i} \Big]_0^\infty      \\
+            &= \frac{1}{4} \Big[ \frac{e^{t(i-1-s)}((s+1)+i)
+                + e^{t(-i-1-s)}((s+1)-i)}{(s+1)^2+1}
+                - \frac{e^{t(-i+1-s)}((s-1)-i)
+                + e^{t(i+1-s)}((s-1)+i)}{(s-1)^2+1} \Big]_0^\infty      \\
+        \end{align}
+
+    \item
+        \begin{align}
+            f(t) &= \cos^2(2t) \\
+            \mathscr{L}\{f(t)\}(s) &= \mathscr{L}\{\frac{1}{2}+\frac{1}{2}\cos(4x)\} \\
+            &= \frac{1}{2}\Big(\frac{1}{s}+\frac{s}{s^2+16}\Big) \\
+            &= \frac{1}{2}\Big(\frac{s^2+16 + s^2}{s^3+16s}\Big) \\
+            &= \frac{s^2+8}{s^3+16s} \\
+        \end{align}
 \end{enumerate}
 
 
-\ex{Exercise \#}
+\ex{4}
 
 \begin{enumerate}[label=\alph*)]
-    \item
+    \item 
+        \begin{align}
+            F(s) &= \frac{4}{s^2-2s-3} \\
+            &= \frac{4}{(s-3)(s+1)} = 4\mathscr{L}\{e^{3t}\}\mathscr{L}\{e^{-t}\} \\
+            f(t) &= 4(e^{3t} * e^{-t})(t) \\
+            &= 4\int_0^t{e^{3(t-\tau)}e^{-\tau}d\tau} \\
+            &= 4\int_0^t{e^{3t-3\tau-\tau} d\tau} \\
+            &= 4\int_0^t{e^{3t-4\tau} d\tau} \\
+            &= -4\Big[\frac{1}{4}e^{3t-4\tau}\Big]_0^t\\
+            &= e^{3t} - e^{-t}\\
+        \end{align}
 
     \item
+        \begin{align}
+            F(s) &= \frac{4}{s^4-s^2} \\
+            F(s) &= \frac{4}{s^2(s^2-1)} \\
+            F(s) &= 4\frac{1}{s^2}\mathscr{L}\{\sinh(t)\} \\
+            \intertext{We know that \(\mathscr{L}\{\int\int g(t)dtdt\} = \frac{1}{s^2}G(s)\) which means that}
+            f(t) &= 4\int_0^t\int_0^t\sinh(t)dtdt \\
+            &= \sinh(t) + c_1t + c_2\\
+        \end{align}
 \end{enumerate}
 
 
